# lipsync

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
lipsync/: __init__.py  audio.py  helpers.py  hparams.py  lipsync.py
lipsync/Wav2Lip/: audio.py
lipsync/Wav2Lip/face_detection/: api.py
lipsync/face_detection/: api.py  utils.py
lipsync/face_detection/detection/sfd/: bbox.py  sfd_detector.py
lipsync/models/: __init__.py  conv.py  syncnet.py  wav2lip.py
lipsync/nota/: __init__.py  base.py  conv.py  util.py  wav2lip.py  wav2lip_compressed.py
lipsync/wav2lip/: audio.py  hparams.py
lipsync/wav2lip/face_detection/: api.py
