[tool.poetry]
name = "lipsync"
version = "0.1.0"
description = "A Python module for lip synchronization using the Wav2Lip model, enabling realistic speech-driven facial animation."
authors = ["Vasile B. <mowshon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
tqdm = "^4.66.5"
torch = "^2.4.1"
moviepy = "^1.0.3"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
